# Rep2Proyecto1

./: README
ConexionClient/: CMakeLists.txt  main.cpp
ConexionClient/client/: client.cpp  request.cpp  request.h  rmlib.cpp  rmlib.h
ConexionServer/: CMakeLists.txt  main  main.cpp  output  utput
ConexionServer/server/: file.cpp  file.h  node.cpp  request.cpp  request.h  server.cpp
MemoryManagement/: CMakeLists.txt  main.cpp
MemoryManagement/DS/: file.cpp  file.h  node.cpp
untitled1/: CMakeLists.txt  main.cpp
untitled1/client/: request.h  rmlib.cpp  rmlib.h
